--- a/src/component/Common/InputButton/index.css
+++ b/src/component/Common/InputButton/index.css
@@ -8,15 +8,21 @@
   -webkit-box-align: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  width: 100%;
 }
 .input-button input,
 .input-button button {
   display: flex;
 }
 .input-button button {
-  margin-left: -1px;
-  border-left: none;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
+  margin-left: -3px;
+  border: none;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  color: #fff;
+  background: #2F82BF;
+}
+.input-button button img{
+  position: relative;
+  top: 2px;
+  margin-right: 5px;
 }
