--- a/src/component/ActivitySignUp/Banner/index.css
+++ b/src/component/ActivitySignUp/Banner/index.css
@@ -15,3 +15,9 @@
 .banner-slide .slick-dots li button:before {
     color: #fff;
 }
+
+@media (max-width: 480px) {
+    .banner-slide {
+        border-radius: 0px;
+    }
+}
