--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 #root {
@@ -26,7 +27,7 @@ select {
     font-size: 12px;
     height: 35px;
     position: relative;
-    top: -.5px;
+    top: -0.5px;
     padding: 0.15rem 1.75rem 0.15rem 0.375rem;
     display: inline-block;
     max-width: 100%;
@@ -45,21 +46,26 @@ select {
 }
 
 label {
-  font-weight: bold;
-  display: block;
-  margin: 8px 0;
+    font-weight: bold;
+    display: block;
+    margin: 8px 0;
 }
 
-
-.main-form{
-  padding: 10px 30px 10px 30px;
+.main-form {
+    padding: 10px 30px 10px 30px;
+}
+.main-form .form-control .img-uploader input {
+    width: calc(100% - 85px);
 }
 
-
-.main-form input{
-  width:95%
+.main-form .form-control input {
+    width: 95%;
 }
 
-.form-control{
-  padding:5px 0px 5px 0px
+.form-control {
+    padding: 5px 0px 5px 0px;
+}
+
+.form-control input {
+    width: calc(100% - 12px);
 }
